# claudia

./: .gitignore  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  pyproject.toml
.agent-state/: README.md  history.jsonl  tasks.json
.agent-state/sessions/: .gitkeep
docs/: api-junior.md  api.md  architecture-junior.md  architecture-senior.md  architecture.md  insights.md  onboarding-junior.md  onboarding-senior.md  onboarding.md  readme.md
src/claudia/: __init__.py  agent.py  cli.py  colors.py  coordinator.py  dashboard.py  docs.py
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_colors.py  test_docs.py
