[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudia"
version = "1.0.0"
description = "A lightweight task coordination system for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Paul Kasay" }
]
keywords = ["claude", "ai", "task-management", "coordination", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No dependencies - stdlib only!
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
ssl = [
    "certifi>=2023.0.0",
]

[project.scripts]
claudia = "claudia.cli:main"

[project.urls]
Homepage = "https://github.com/paulkasay/claudia"
Repository = "https://github.com/paulkasay/claudia"
Issues = "https://github.com/paulkasay/claudia/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claudia"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
